--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -25,12 +25,48 @@
   display: none;
 }
 
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
 </style>
 <body>
   <h1><u>Fitbit Steps - January 2016</u></h1>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+  <button id="sortAsc" onclick="sortBarsAsc()">Sort Asc</button>
+  <button id="sortDsc" onclick="sortBarsDsc()">Sort Dsc</button>
+  <button id="reset" onclick="reset()">Reset</button>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script>
-
+// The following resources were used as guides for my implementation:
+// Barchart and highlighting: https://bl.ocks.org/mbostock/3885304
+// Sorting barcharts 1: http://bl.ocks.org/mbostock/3885705
+// Sorting barcharts 2: http://jsfiddle.net/enigmarm/3HL4a/13/
+// Tooltips for barcharts: http://bl.ocks.org/Caged/6476579
 var margin = {top: 20, right: 20, bottom: 40, left: 40},
     width = 1400 - margin.left - margin.right,
     height = 550 - margin.top - margin.bottom;
@@ -53,11 +89,20 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left")
 	
+var tip = d3.tip()
+	.attr('class', 'd3-tip')
+	.offset([-10, 0])
+	.html(function(d) {
+		return "<strong>Steps taken:</strong> <span style='color:lightblue'>" + d.steps + "</span>";
+	})
+	
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+	
+svg.call(tip);
 	
 d3.tsv("FitbitStepsJanuary2016.tsv", type, function(error, data) {
   if (error) throw error;
@@ -93,7 +138,76 @@ d3.tsv("FitbitStepsJanuary2016.tsv", type, function(error, data) {
       .attr("x", function(d) { return x(d.date); })
       .attr("width", x.rangeBand())
       .attr("y", function(d) { return y(d.steps); })
-      .attr("height", function(d) { return height - y(d.steps); });
+      .attr("height", function(d) { return height - y(d.steps); })
+	  .on('mouseover', tip.show)
+      .on('mouseout', tip.hide);
+	  
+  d3.select("#sortAsc").on("click", sortBarsAsc);
+  d3.select("#sortDsc").on("click", sortBarsDsc);
+  d3.select("#reset").on("click", reset);
+  
+  function sortBarsAsc() {
+    var x0 = x.domain(data.sort(function(a, b) { return a.steps - b.steps; })
+	  .map(function(d) { return d.date; }))
+	  .copy();
+
+    svg.selectAll(".bar")
+	  .sort(function(a, b) { return x0(a.date) - x0(b.date); });
+
+    var transition = svg.transition().duration(750),
+  	  delay = function(d, i) { return i * 50; };
+
+    transition.selectAll(".bar")
+	  .delay(delay)
+	  .attr("x", function(d) { return x0(d.date); });
+
+    transition.select(".x.axis")
+	  .call(xAxis)
+    .selectAll("g")
+	  .delay(delay);
+  }
+  
+  function sortBarsDsc() {
+    var x0 = x.domain(data.sort(function(a, b) { return b.steps - a.steps; })
+	  .map(function(d) { return d.date; }))
+	  .copy();
+
+    svg.selectAll(".bar")
+	  .sort(function(a, b) { return x0(a.date) - x0(b.date); });
+
+    var transition = svg.transition().duration(750),
+  	  delay = function(d, i) { return i * 50; };
+
+    transition.selectAll(".bar")
+	  .delay(delay)
+	  .attr("x", function(d) { return x0(d.date); });
+
+    transition.select(".x.axis")
+	  .call(xAxis)
+    .selectAll("g")
+	  .delay(delay);
+  }
+  
+  function reset() {
+    var x0 = x.domain(data.sort(function(a, b) { return d3.ascending(a.date, b.date); })
+	  .map(function(d) { return d.date; }))
+	  .copy();
+
+    svg.selectAll(".bar")
+	  .sort(function(a, b) { return x0(a.date) - x0(b.date); });
+
+    var transition = svg.transition().duration(750),
+  	  delay = function(d, i) { return i * 50; };
+
+    transition.selectAll(".bar")
+	  .delay(delay)
+	  .attr("x", function(d) { return x0(d.date); });
+
+    transition.select(".x.axis")
+	  .call(xAxis)
+    .selectAll("g")
+	  .delay(delay);
+  }
 });
 
 function type(d) {
